[project]
name = "async-pmtiles"
version = "0.1.0"
description = "Async version of protomaps/PMTiles."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Vincent Sarago", email = "vincent@developmentseed.com" },
    { name = "Kyle Barron", email = "kyle@developmentseed.org" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = ["obspec>=0.1.0", "pmtiles>=3.4.1"]

[project.urls]
Source = "https://github.com/developmentseed/async-pmtiles"
Documentation = "https://developmentseed.org/async-pmtiles/"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "ipykernel>=7.2.0",
    "obstore>=0.8.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
select = ["ALL"]
ignore = ["EM", "TD"]
