[project]
name = "async-pmtiles"
version = "0.1.0"
description = "Async version of protomaps/PMTiles."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Vincent Sarago", email = "vincent@developmentseed.com" },
    { name = "Kyle Barron", email = "kyle@developmentseed.org" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = ["obspec>=0.1.0", "pmtiles>=3.4.1"]

[project.urls]
Source = "https://github.com/developmentseed/async-pmtiles"
Documentation = "https://developmentseed.org/async-pmtiles/"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "ipykernel>=7.2.0",
    "obstore>=0.8.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
docs = [
    # Workaround for https://github.com/mkdocs/mkdocs/issues/4032
    "click<8.3",
    "mkdocs-material[imaging]>=9.5.49",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0",
    "mike>=2.1.3",
    "griffe-inherited-docstrings>=1.0.1",
    # We use ruff format ourselves, but mkdocstrings requires black to be
    # installed to format signatures in the docs
    "black>=26",
]

[tool.ruff]
select = ["ALL"]
ignore = ["EM", "TD"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert
    "ANN001",  # Missing type annotation for function argument `geom`Ruff
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function `it`
    "ANN204",  # Missing return type annotation for special method
    "D",       # docstring
    "PLR2004", # Magic value used in comparison, consider replacing `100` with a constant variable
    "S301",    # `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
    "S608",    #  Possible SQL injection vector through string-based query construction
    "SLF001",  # Private member accessed
]
